* April 19 2006, Kristian Van Der Vliet *

Synched the 3c59x driver with a more recent Linux version.  Recognise the following new
cards:

3c982 Hydra Dual Port A
3c982 Hydra Dual Port B
3c905B-T4
3c920B-EMB-WNM Tornado

* April 16 2006, Arno Klenke *

Appserver patches:
	o Added code to fallback from backbuffered to singlebuffered rendering for a window
	o Avoid recalculating the visible areas of the layers if this is not necessary

* April 13 2006, Kristian Van Der Vliet *

Fixed memory detection on Radeon IGP cards
PCI busmanager correctly handles multifunction devices (Patch by Arno Klenke)
Enable the off-screen bitmaps support in the Savage driver now that they work, thanks
to a related appserver fix from Arno.

* April 10 2006, Arno Klenke *

Synced geforcefx driver with X driver.
Added the updated screen preferences

* March 25 2006, Arno Klenke *

The geforcefx driver should now work on cards which store their real pci device ids
in a special register.

* March 16 2006, Kristian Van Der Vliet *

Updated the Savage driver
	o Support "old" streams engine (overlays)
	o Fix overlays in 16bit mode with "new" streams
	o Support for off-screen bitmaps based on an early X.org EXA patch.  This is
	  currently disabled as I can not solve a rendering error in 16bit modes with
	  off-screen->screen blits.  Asyncronous rendering is enabled however.

* February 24 2006, Kristian Van Der Vliet *

Added a Maestro 1/2[E] driver.  Ported from the Linux 2.6 OSS driver and tested
on a Maestro 2E.  PCM output and mixer are functional.

* February 11 2006, Kaj de Vos *

Added objcopy from BinUtils to the base distribution, because it's needed by rescopy.

* January 27 2006, Arno Klenke *

Synced the geforcefx driver with the X driver. This will hopefully fix the FX5200 problems.

* January 26 2006, Kristian Van Der Vliet *

Added a USB printer driver.  The driver is a re-write of the Linux usblp driver