@@ -64,7 +64,8 @@ enum
     DR_GET_WINDOW_ICON,
     DR_SET_DESKTOP_MAX_WINFRAME,
     DR_GET_DESKTOP_MAX_WINFRAME,
-    
+    DR_MINIMIZE_ALL,
+
     AR_OPEN_WINDOW = 10000,
     AR_CLOSE_WINDOW,
     AR_DELETE_WINDOW,
